Update alpine openjdk image up to 8u171-jdk-alpine3.8